--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2863,7 +2863,7 @@ header .navbar-expand .navbar-brand img {
 
 .fit-image {
     width: 100%;
-    height: 100%;
+    height: auto;
     object-fit: cover;
     object-position: center;
 }
@@ -4568,26 +4568,26 @@ footer .copyright a:not(.btn) {
 
 
 .title-about{
-    font: normal normal 100 45px/39px Poppins;
+    font: normal normal 200 30px/39px Poppins;
     color: #E00729;
     margin: 0;
-    margin-top: 80px !important;
+    margin-top: 0 !important;
 }
 
 .h3-about{
-    font: normal normal normal 30px/39px Poppins;
+    font: normal normal normal 26px/39px Poppins;
     color: #58585A;
     margin: 0 !important;
 }
 
 
 .h4-about{
-    font: normal normal 200 26px/39px Poppins;
+    font: normal normal 200 22px/39px Poppins;
     color: #58585A;
 
 }
 .h4-about b{
-    font: normal normal 400 26px/39px Poppins;
+    font: normal normal 400 22px/39px Poppins;
     color: #58585A;
 
 }
@@ -4623,6 +4623,11 @@ footer .copyright a:not(.btn) {
     margin-bottom: -10px;
     font-size: 0.9rem;
     color: #222F3E;
+}
+.full-slider.swiper-container-horizontal > .swiper-pagination-bullets {
+    position: absolute!important;
+    top: initial!important;
+    bottom: 2vh !important;
 }
 }
 
