--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -52,10 +52,10 @@
     --black-color: #040402;
     --dark-grey-color: #191919;
 
-    --primary-t-color: #2f323a;
+    --primary-t-color: #6b6f79;
     --secondary-t-color: #f5f5f5; 
-    --primary-p-color: #6f6f6f;
-    --secondary-p-color: #8e8e8e;
+    --primary-p-color: #ffffff;
+    --secondary-p-color: #ffffff;
     --primary-b-color: #f5f5f5;
     --primary-l-color: rgba(0, 0, 0, .25);
     --secondary-l-color: rgba(255, 255, 255, 0.25);
