--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5688,7 +5688,10 @@ footer .copyright a:not(.btn) {
     line-height: 10px !important;
 }
 
-
+.persona {
+    margin: 0px; 
+    padding: 0px;
+}
 
 
 
