--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -52,7 +52,7 @@
     --black-color: #040402;
     --dark-grey-color: #191919;
 
-    --primary-t-color: #6b6f79;
+    --primary-t-color: #43464b;
     --secondary-t-color: #f5f5f5; 
     --primary-p-color: #ffffff;
     --secondary-p-color: #ffffff;
